test/2/parse/eof-def.err
test/2/parse/eof-def.ploy:1:4: parse error: reached end of file.
| x =â
     ^
